# bakaGeometry

./: .gitignore  Cargo.toml  README.md  alg_cost_completion_repair_instructions_v1_combined.md  candidate_cover_completion_instructions_v1_combined.md
geosolver-core/: Cargo.toml  README.md
geosolver-core/scripts/: audit_v4_conformance.py
geosolver-core/src/: api.rs  lib.rs
geosolver-core/src/algebra/: crt.rs  dense_matrix.rs  elimination.rs  f4.rs  groebner.rs  interpolation.rs  krylov.rs  linear_solve.rs  mod.rs  modular.rs  monomial_order.rs  norm_trace.rs  normal_form.rs  polynomial_ops.rs  quotient.rs  rational_reconstruction.rs  real_root.rs  regular_chain.rs  resultant.rs  sign.rs  sparse_matrix.rs
geosolver-core/src/compose/: compose.rs  final_support.rs  message.rs  mod.rs  separator_elimination.rs
geosolver-core/src/fiber/: exact_image.rs  hermite.rs  mod.rs  slack_semantics.rs  thom.rs
geosolver-core/src/graph/: hypergraph.rs  influence.rs  metrics.rs  mod.rs  projection_dag.rs  separators.rs  tree_decomposition.rs  weighted_primal.rs
geosolver-core/tests/: acr_p9_large_footprint_stress.rs  ccc_candidate_cover_completion.rs  fcr_final_nonfinite_semantics.rs  fcr_p10_acceptance_suite.rs  fcr_p11_red_team_suite.rs  fcr_p4_pure_planning.rs  generic_success_route_planner.rs  gpsr_generic_planner_success_route.rs  p12_roots_decode_integration.rs  p12g_generality_stress.rs  p13_exact_image_semantics.rs  p14_full_pipeline_integration.rs  p15_acceptance_stress.rs  p3_public_pipeline_integration.rs  v4_candidate_cover_conformance.rs
src/: arith.rs  crt.rs  (+41 more)
(+931 files in other folders)
