[package]
name = "geosolver-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Certified target-candidate-cover solver core over rational polynomial systems."

[lib]
name = "geosolver_core"
path = "src/lib.rs"

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
