[package]
name = "geosolver-core"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
